--- a/Part 1 - Tensors in PyTorch.ipynb
+++ b/Part 1 - Tensors in PyTorch.ipynb
@@ -93,8 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -115,20 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.9107  0.7433\n",
-       " 0.7535  0.6031\n",
-       " 0.7666  0.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[0.3122, 0.4889],\n",
+       "        [0.3865, 0.9065],\n",
+       "        [0.5161, 0.1789]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,20 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1  1\n",
-       " 1  1\n",
-       " 1  1\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,20 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107  1.7433\n",
-       " 1.7535  1.6031\n",
-       " 1.7666  1.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1.3122, 1.4889],\n",
+       "        [1.3865, 1.9065],\n",
+       "        [1.5161, 1.1789]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,49 +193,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107\n",
-       " 1.7433\n",
-       "[torch.FloatTensor of size 2]"
+       "tensor([1.3865, 1.9065])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z[0]"
+    "z[0]\n",
+    "z[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.7433\n",
-       " 1.6031\n",
-       " 1.8878\n",
-       "[torch.FloatTensor of size 3x1]"
+       "tensor([1.4889, 1.9065, 1.1789])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z[:, 1:]"
+    "z[:, 1:]\n",
+    "z[:, 1]"
    ]
   },
   {
@@ -251,20 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.3122, 2.4889],\n",
+       "        [2.3865, 2.9065],\n",
+       "        [2.5161, 2.1789]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,20 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107  1.7433\n",
-       " 1.7535  1.6031\n",
-       " 1.7666  1.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1.3122, 1.4889],\n",
+       "        [1.3865, 1.9065],\n",
+       "        [1.5161, 1.1789]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,20 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.3122, 2.4889],\n",
+       "        [2.3865, 2.9065],\n",
+       "        [2.5161, 2.1789]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,20 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.3122, 2.4889],\n",
+       "        [2.3865, 2.9065],\n",
+       "        [2.5161, 2.1789]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +352,7 @@
        "torch.Size([3, 2])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,19 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433  2.7535\n",
-       " 2.6031  2.7666  2.8878\n",
-       "[torch.FloatTensor of size 2x3]"
+       "tensor([[2.3122, 2.4889, 2.3865],\n",
+       "        [2.9065, 2.5161, 2.1789]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,19 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433  2.7535\n",
-       " 2.6031  2.7666  2.8878\n",
-       "[torch.FloatTensor of size 2x3]"
+       "tensor([[2.3122, 2.4889, 2.3865],\n",
+       "        [2.9065, 2.5161, 2.1789]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,19 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.87024232, 0.8594972 , 0.11135835],\n",
+       "       [0.60448971, 0.48297025, 0.179558  ],\n",
+       "       [0.98155388, 0.5878237 , 0.14307266],\n",
+       "       [0.07963177, 0.30093936, 0.97115412]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,21 +438,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.3367  0.5953  0.6543\n",
-       " 0.8653  0.5995  0.2804\n",
-       " 0.4841  0.9836  0.3388\n",
-       " 0.2559  0.5108  0.3999\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[0.8702, 0.8595, 0.1114],\n",
+       "        [0.6045, 0.4830, 0.1796],\n",
+       "        [0.9816, 0.5878, 0.1431],\n",
+       "        [0.0796, 0.3009, 0.9712]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.87024232, 0.8594972 , 0.11135835],\n",
+       "       [0.60448971, 0.48297025, 0.179558  ],\n",
+       "       [0.98155388, 0.5878237 , 0.14307266],\n",
+       "       [0.07963177, 0.30093936, 0.97115412]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,21 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.6734  1.1906  1.3087\n",
-       " 1.7306  1.1989  0.5609\n",
-       " 0.9682  1.9672  0.6777\n",
-       " 0.5118  1.0216  0.7997\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[1.7405, 1.7190, 0.2227],\n",
+       "        [1.2090, 0.9659, 0.3591],\n",
+       "        [1.9631, 1.1756, 0.2861],\n",
+       "        [0.1593, 0.6019, 1.9423]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,19 +516,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.67338991,  1.19063124,  1.30867888],\n",
-       "       [ 1.73062448,  1.19890728,  0.56087946],\n",
-       "       [ 0.96818606,  1.96715243,  0.67768568],\n",
-       "       [ 0.51182782,  1.02163565,  0.79972807]])"
+       "array([[1.74048463, 1.71899441, 0.2227167 ],\n",
+       "       [1.20897943, 0.96594051, 0.359116  ],\n",
+       "       [1.96310776, 1.1756474 , 0.28614532],\n",
+       "       [0.15926353, 0.60187871, 1.94230824]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,6 +537,15 @@
     "# Numpy array matches new values from Tensor\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -580,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
