--- a/Part 1 - Tensors in PyTorch.ipynb
+++ b/Part 1 - Tensors in PyTorch.ipynb
@@ -93,10 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -117,18 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.3122, 0.4889],\n",
-       "        [0.3865, 0.9065],\n",
-       "        [0.5161, 0.1789]])"
+       "tensor([[0.9421, 0.8764],\n",
+       "        [0.2827, 0.5167],\n",
+       "        [0.5210, 0.2025]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +149,7 @@
        "        [1., 1.]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,18 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.3122, 1.4889],\n",
-       "        [1.3865, 1.9065],\n",
-       "        [1.5161, 1.1789]])"
+       "tensor([[1.9421, 1.8764],\n",
+       "        [1.2827, 1.5167],\n",
+       "        [1.5210, 1.2025]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,44 +191,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.9421, 1.8764])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([1.3865, 1.9065])"
+       "tensor([1.2827, 1.5167])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z[0]\n",
+    "print(z[0])\n",
     "z[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([1.4889, 1.9065, 1.1789])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.8764],\n",
+      "        [1.5167],\n",
+      "        [1.2025]])\n",
+      "torch.Size([3, 1])\n",
+      "\n",
+      "tensor([1.8764, 1.5167, 1.2025])\n",
+      "torch.Size([3])\n"
+     ]
     }
    ],
    "source": [
-    "z[:, 1:]\n",
-    "z[:, 1]"
+    "print(z[:, 1:])\n",
+    "print(z[:, 1:].size())\n",
+    "print()\n",
+    "print(z[:, 1])\n",
+    "print(z[:, 1].size())"
    ]
   },
   {
@@ -242,18 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3122, 2.4889],\n",
-       "        [2.3865, 2.9065],\n",
-       "        [2.5161, 2.1789]])"
+       "tensor([[2.9421, 2.8764],\n",
+       "        [2.2827, 2.5167],\n",
+       "        [2.5210, 2.2025]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,18 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.3122, 1.4889],\n",
-       "        [1.3865, 1.9065],\n",
-       "        [1.5161, 1.1789]])"
+       "tensor([[1.9421, 1.8764],\n",
+       "        [1.2827, 1.5167],\n",
+       "        [1.5210, 1.2025]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,18 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3122, 2.4889],\n",
-       "        [2.3865, 2.9065],\n",
-       "        [2.5161, 2.1789]])"
+       "tensor([[2.9421, 2.8764],\n",
+       "        [2.2827, 2.5167],\n",
+       "        [2.5210, 2.2025]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,18 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3122, 2.4889],\n",
-       "        [2.3865, 2.9065],\n",
-       "        [2.5161, 2.1789]])"
+       "tensor([[2.9421, 2.8764],\n",
+       "        [2.2827, 2.5167],\n",
+       "        [2.5210, 2.2025]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +363,7 @@
        "torch.Size([3, 2])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3122, 2.4889, 2.3865],\n",
-       "        [2.9065, 2.5161, 2.1789]])"
+       "tensor([[2.9421, 2.8764, 2.2827],\n",
+       "        [2.5167, 2.5210, 2.2025]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,17 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.3122, 2.4889, 2.3865],\n",
-       "        [2.9065, 2.5161, 2.1789]])"
+       "tensor([[2.9421, 2.8764, 2.2827],\n",
+       "        [2.5167, 2.5210, 2.2025]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,19 +425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.87024232, 0.8594972 , 0.11135835],\n",
-       "       [0.60448971, 0.48297025, 0.179558  ],\n",
-       "       [0.98155388, 0.5878237 , 0.14307266],\n",
-       "       [0.07963177, 0.30093936, 0.97115412]])"
+       "array([[0.1064    , 0.01819801, 0.78646988],\n",
+       "       [0.99345032, 0.19073471, 0.54931465],\n",
+       "       [0.57492593, 0.26792374, 0.69553976],\n",
+       "       [0.63984491, 0.95105597, 0.65176339]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,19 +449,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.8702, 0.8595, 0.1114],\n",
-       "        [0.6045, 0.4830, 0.1796],\n",
-       "        [0.9816, 0.5878, 0.1431],\n",
-       "        [0.0796, 0.3009, 0.9712]], dtype=torch.float64)"
+       "tensor([[0.1064, 0.0182, 0.7865],\n",
+       "        [0.9935, 0.1907, 0.5493],\n",
+       "        [0.5749, 0.2679, 0.6955],\n",
+       "        [0.6398, 0.9511, 0.6518]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,19 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.87024232, 0.8594972 , 0.11135835],\n",
-       "       [0.60448971, 0.48297025, 0.179558  ],\n",
-       "       [0.98155388, 0.5878237 , 0.14307266],\n",
-       "       [0.07963177, 0.30093936, 0.97115412]])"
+       "array([[0.1064    , 0.01819801, 0.78646988],\n",
+       "       [0.99345032, 0.19073471, 0.54931465],\n",
+       "       [0.57492593, 0.26792374, 0.69553976],\n",
+       "       [0.63984491, 0.95105597, 0.65176339]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,19 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.7405, 1.7190, 0.2227],\n",
-       "        [1.2090, 0.9659, 0.3591],\n",
-       "        [1.9631, 1.1756, 0.2861],\n",
-       "        [0.1593, 0.6019, 1.9423]], dtype=torch.float64)"
+       "tensor([[0.2128, 0.0364, 1.5729],\n",
+       "        [1.9869, 0.3815, 1.0986],\n",
+       "        [1.1499, 0.5358, 1.3911],\n",
+       "        [1.2797, 1.9021, 1.3035]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,19 +527,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.74048463, 1.71899441, 0.2227167 ],\n",
-       "       [1.20897943, 0.96594051, 0.359116  ],\n",
-       "       [1.96310776, 1.1756474 , 0.28614532],\n",
-       "       [0.15926353, 0.60187871, 1.94230824]])"
+       "array([[0.21279999, 0.03639601, 1.57293976],\n",
+       "       [1.98690064, 0.38146943, 1.0986293 ],\n",
+       "       [1.14985185, 0.53584748, 1.39107951],\n",
+       "       [1.27968981, 1.90211194, 1.30352677]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
