--- a/Part 2 - Neural Networks in PyTorch.ipynb
+++ b/Part 2 - Neural Networks in PyTorch.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import things like usual\n",
@@ -39,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define a transform to normalize the data\n",
@@ -58,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dataiter = iter(trainloader)\n",
@@ -86,8 +92,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 250,
-       "width": 253
+       "height": 250.0,
+       "width": 253.0
       }
      },
      "output_type": "display_data"
@@ -119,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torch import nn\n",
@@ -131,6 +139,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -172,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(model.fc1.weight)\n",
@@ -189,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set biases to all zeros\n",
@@ -199,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# sample from random normal with standard dev = 0.01\n",
@@ -229,8 +244,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 224,
-       "width": 423
+       "height": 224.0,
+       "width": 423.0
       }
      },
      "output_type": "display_data"
@@ -290,8 +305,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 224,
-       "width": 423
+       "height": 224.0,
+       "width": 423.0
       }
      },
      "output_type": "display_data"
@@ -373,7 +388,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## TODO: Your network here"
@@ -382,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Run this cell with your model to make sure it works ##\n",
@@ -410,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
