--- a/Part 3 - Training Neural Networks.ipynb
+++ b/Part 3 - Training Neural Networks.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.5810, -0.9113],\n",
+      "        [ 1.7988, -0.7520]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2,2, requires_grad=True)\n",
     "print(x)"
@@ -112,9 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3375, 0.8305],\n",
+      "        [3.2356, 0.5655]], grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x**2\n",
     "print(y)"
@@ -129,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PowBackward0 object at 0x000001DBB292B780>\n"
+     ]
+    }
+   ],
    "source": [
     "## grad_fn shows the function that generated this variable\n",
     "print(y.grad_fn)"
@@ -146,12 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.2423, grad_fn=<MeanBackward1>)\n",
+      "<MeanBackward1 object at 0x000001DBB60904E0>\n"
+     ]
+    }
+   ],
    "source": [
     "z = y.mean()\n",
-    "print(z)"
+    "print(z)\n",
+    "print(z.grad_fn)"
    ]
   },
   {
@@ -163,11 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "print(x.grad)"
+    "print(x.grad)\n",
+    "print(y.grad)"
    ]
   },
   {
@@ -183,9 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.2905, -0.4557],\n",
+      "        [ 0.8994, -0.3760]])\n",
+      "tensor([[ 0.2905, -0.4557],\n",
+      "        [ 0.8994, -0.3760]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z.backward()\n",
     "print(x.grad)\n",
@@ -418,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
