--- a/Part 3 - Training Neural Networks.ipynb
+++ b/Part 3 - Training Neural Networks.ipynb
@@ -81,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -109,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.5810, -0.9113],\n",
-      "        [ 1.7988, -0.7520]], requires_grad=True)\n"
+      "tensor([[ 0.7278,  1.1636],\n",
+      "        [ 1.1906, -0.8112]], requires_grad=True)\n"
      ]
     }
    ],
@@ -128,8 +130,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3375, 0.8305],\n",
-      "        [3.2356, 0.5655]], grad_fn=<PowBackward0>)\n"
+      "tensor([[0.5298, 1.3540],\n",
+      "        [1.4175, 0.6580]], grad_fn=<PowBackward0>)\n"
      ]
     }
    ],
@@ -154,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PowBackward0 object at 0x000001DBB292B780>\n"
+      "<PowBackward0 object at 0x10c66c320>\n"
      ]
     }
    ],
@@ -172,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.2423, grad_fn=<MeanBackward1>)\n",
-      "<MeanBackward1 object at 0x000001DBB60904E0>\n"
+      "tensor(0.9898, grad_fn=<MeanBackward1>)\n",
+      "<MeanBackward1 object at 0x10cd01438>\n"
      ]
     }
    ],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2905, -0.4557],\n",
-      "        [ 0.8994, -0.3760]])\n",
-      "tensor([[ 0.2905, -0.4557],\n",
-      "        [ 0.8994, -0.3760]], grad_fn=<DivBackward0>)\n"
+      "tensor([[ 0.3639,  0.5818],\n",
+      "        [ 0.5953, -0.4056]])\n",
+      "tensor([[ 0.3639,  0.5818],\n",
+      "        [ 0.5953, -0.4056]], grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
@@ -268,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torchvision import datasets, transforms\n",
@@ -292,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Hyperparameters for our network\n",
@@ -323,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
@@ -347,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Initial weights - ', model.fc1.weight)\n",
@@ -369,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Updated weights - ', model.fc1.weight)"
@@ -387,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimizer = optim.SGD(model.parameters(), lr=0.003)"
@@ -396,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "epochs = 3\n",
@@ -436,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "images, labels = next(iter(trainloader))\n",
@@ -460,10 +478,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tensorflow_py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tensorflow_py35-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -475,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
