--- a/Part 8 - Transfer Learning.ipynb
+++ b/Part 8 - Transfer Learning.ipynb
@@ -17,8 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -42,13 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "data_dir = 'Cat_Dog_data'\n",
+    "data_dir = '/Users/aravindagayan/Documents/Projects/DataSets/Cat_Dog_data'\n",
     "\n",
     "# TODO: Define transforms for the training data and testing data\n",
+    "\n",
+    "train_transforms = transforms.Compose([transforms.Grayscale(num_output_channels=1),\n",
+    "                                       transforms.Resize(225),\n",
+    "                                       transforms.RandomResizedCrop(224),\n",
+    "                                       transforms.RandomRotation(30),\n",
+    "                                       transforms.RandomHorizontalFlip(),\n",
+    "                                       transforms.ToTensor(),\n",
+    "                                       transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                            [0.229, 0.224, 0.225])])\n",
+    "\n",
+    "test_transforms = transforms.Compose([transforms.Grayscale(num_output_channels=1),\n",
+    "                                      transforms.Resize(225),\n",
+    "                                      transforms.CenterCrop(224),\n",
+    "                                      transforms.ToTensor(),\n",
+    "                                      transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                           [0.229, 0.224, 0.225])])\n",
     "\n",
     "\n",
     "# Pass transforms in here, then run the next cell to see how the transforms look\n",
@@ -70,6 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -88,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Freeze parameters so we don't backprop through them\n",
@@ -118,7 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time"
@@ -127,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for device in ['cpu', 'cuda']:\n",
@@ -181,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Train a model with a pre-trained network"
@@ -190,9 +219,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tensorflow_py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tensorflow_py35-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
