--- a/Part 4 - Fashion-MNIST Exercise.ipynb
+++ b/Part 4 - Fashion-MNIST Exercise.ipynb
@@ -58,8 +58,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 233.0,
-       "width": 233.0
+       "height": 233,
+       "width": 233
       }
      },
      "output_type": "display_data"
@@ -73,8 +73,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 233.0,
-       "width": 233.0
+       "height": 233,
+       "width": 233
       }
      },
      "output_type": "display_data"
@@ -302,8 +302,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 204.0,
-       "width": 423.0
+       "height": 204,
+       "width": 423
       }
      },
      "output_type": "display_data"
@@ -338,9 +338,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow_py35-py"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
