--- a/Part 5 - Inference and Validation.ipynb
+++ b/Part 5 - Inference and Validation.ipynb
@@ -331,9 +331,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow_py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -345,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
