--- a/Part 7 - Loading Image Data.ipynb
+++ b/Part 7 - Loading Image Data.ipynb
@@ -134,8 +134,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 233.0,
-       "width": 233.0
+       "height": 233,
+       "width": 233
       }
      },
      "output_type": "display_data"
@@ -241,8 +241,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 137.0,
-       "width": 574.0
+       "height": 137,
+       "width": 574
       }
      },
      "output_type": "display_data"
@@ -256,8 +256,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 137.0,
-       "width": 574.0
+       "height": 137,
+       "width": 574
       }
      },
      "output_type": "display_data"
@@ -339,8 +339,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 233.0,
-       "width": 233.0
+       "height": 233,
+       "width": 233
       }
      },
      "output_type": "display_data"
@@ -406,8 +406,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 137.0,
-       "width": 574.0
+       "height": 137,
+       "width": 574
       }
      },
      "output_type": "display_data"
@@ -421,8 +421,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 137.0,
-       "width": 574.0
+       "height": 137,
+       "width": 574
       }
      },
      "output_type": "display_data"
@@ -596,8 +596,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 233.0,
-       "width": 233.0
+       "height": 233,
+       "width": 233
       }
      },
      "output_type": "display_data"
@@ -631,9 +631,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow_py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -645,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
